# fastAPI

./: README.md  database.db  main.py  pyproject.toml
backend/: .example.env  README.md  database.db  dependencies.py  main.py  pyproject.toml  requirements.txt
backend/.choreo/: component.yaml
backend/background_tasks/: __init__.py  generate_story.py
backend/core/: config.py  models.py  prompts.py  story_generator.py
backend/data/: __init__.py  default_story.py
backend/db/: database.py
backend/models/: __init__.py  job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: __init__.py  job.py  story.py
frontend/: .example.env  package-lock.json  vite.config.js
frontend/src/: App.jsx  util.js
frontend/src/components/: LoadingStatus.jsx  StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx  ThemeInput.jsx
tests/: test_main.py
